2022-10-15T00:41:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3253813105 # 530
* notice: last 14d: unq all: 39 5730
* notice: prev accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77495
* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1170 77968
* notice: prev exec diff / last date diff / accum: unq all: +0 +146 -0 -8 / +2 +403 -0 -0 / 2 403
* notice: removed / changed dates: [2022-09-30] / [2022-10-01 2022-10-14]

2022-10-14T16:11:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3251375042 # 529
* notice: last 14d: unq all: 39 5657
* notice: prev accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77519
* notice: next accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77495
* notice: prev exec diff / last date diff / accum: unq all: +0 +120 -0 -144 / +2 +257 -0 -0 / 2 257
* notice: removed / changed dates: [] / [2022-09-30 2022-10-14]

2022-10-14T08:12:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248419404 # 528
* notice: last 14d: unq all: 39 5681
* notice: prev accum: outdated-unq outdated-all / unq all: 1103 71838 / 1168 77569
* notice: next accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77519
* notice: prev exec diff / last date diff / accum: unq all: +2 +137 -1 -187 / +2 +137 -0 -0 / 2 137
* notice: removed / changed dates: [] / [2022-09-30 2022-10-14]

2022-10-14T00:50:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3246677698 # 527
* notice: last 14d: unq all: 39 5731
* notice: prev accum: outdated-unq outdated-all / unq all: 1101 71434 / 1163 77075
* notice: next accum: outdated-unq outdated-all / unq all: 1103 71838 / 1168 77569
* notice: prev exec diff / last date diff / accum: unq all: +4 +158 -0 -4 / +10 +420 -0 -0 / 10 420