@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-10-15T08:08:42Z",
-  "count" : 213,
-  "count_minmax" : [ 134, 405 ],
-  "count_decinc" : [ -192, +405 ],
+  "count" : 138,
+  "count_minmax" : [ 138, 138 ],
+  "count_decinc" : [ -0, +138 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
