@@ -1,3 +1,11 @@
+2022-10-15T08:08:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3254961428 # 531
+* notice: last 14d: unq all: 39 5684
+* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1170 77968
+* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1172 77922
+* notice: prev exec diff / last date diff / accum: unq all: +2 +138 -0 -184 / +2 +138 -0 -0 / 2 138
+* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]
+
 2022-10-15T00:41:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3253813105 # 530
 * notice: last 14d: unq all: 39 5730
